Closed Bug 1169850 Opened 10 years ago Closed 10 years ago

PNK_EXPORT_FROM is not handled in BytecodeEmitter::emitTree.

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: arai, Assigned: arai)

References

Details

Attachments

(1 file)

https://dxr.mozilla.org/mozilla-central/source/js/src/frontend/BytecodeEmitter.cpp?from=BytecodeEmitter.cpp&case=true#7506 > case PNK_IMPORT: > case PNK_EXPORT: > case PNK_EXPORT_FROM: > // TODO: Implement emitter support for modules > reportError(nullptr, JSMSG_MODULES_NOT_IMPLEMENTED); > return false; PNK_EXPORT_DEFAULT should be there.
Assignee: nobody → arai.unmht
Added PNK_EXPORT_DEFAULT case, and a test just like bug1105608.js, which was for PNK_EXPORT_FROM.
Attachment #8613183 - Flags: review?(shu)
Attachment #8613183 - Flags: review?(shu) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: