Bug 1169850 - Handle PNK_EXPORT_DEFAULT in BytecodeEmitter::emitTree. r=shu